[tool.poetry]
name = "refit_boosters"
version = "0.0.1"
description = ""
authors = ["CAMB", "JACG"]
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
ipykernel = "^6.29.2"
pandas = "2.1.4"
matplotlib = "3.10.0"
jupyter = "^1.1.1"
lightgbm = "^4.6.0"
scikit-learn = "^1.7.0"
optuna = "^4.4.0"
pyarrow = "^20.0.0"
kaggle = "^1.7.4.5"
dotenv = "^0.9.9"
xgboost = "^3.0.3"

[tool.poetry.group.dev.dependencies]

